# shilun

./: .env.example  .gitignore  .graphify_old.json  01_一期技术PRD.md  02_数据库建表.sql  03_核心模块接口与伪代码.md  04_前端方案说明.md  05_二期纲领文件.md  06_二期技术PRD.md  07_二期实施清单.md  08_三期迭代.md  09_四期技术方案.md  README.md  pyproject.toml  双击启动说明.txt  开发任务清单.md  项目结构中文说明.md
.venv312/: pyvenv.cfg
assets/: ShilunIcon.icns
docs/: atomic_rules.md  candidate_pools.md  factor_pool.md  joinquant_backtest.md  ma5_v0.2_改造PRD.md  ma5趋势线战法  market_part1_state_machine.md  market_sector_state_machine.md  market_snapshot_records_spec.md  mongo_data_flow.md  rustization_status.md  session_review_full.md  strategy_layer.md  trading_system_detailed_spec.md  trading_system_roadmap.md  volume_stage_quant_spec.md
examples/: joinquant_strategy.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  小市值策略.py
outputs/: 000539.SZ_chip_peak_trend_2026-04-01.csv  000539.SZ_chip_peak_trend_30d_2026-04-02.csv  market_daily_2026-03-31.pkl  market_daily_2026-04-09.pkl  market_top_100_2026-03-30.csv  market_top_100_2026-03-30.md  market_top_100_2026-03-30_no_st.csv  market_top_100_2026-03-30_no_st.md  market_top_100_2026-03-31_no_st.csv  market_top_100_2026-03-31_no_st.md  market_top_100_2026-04-10_no_st.csv  market_top_100_2026-04-10_no_st.md  market_top_100_2026-04-13_no_st.csv  market_top_100_2026-04-13_no_st.md  market_top_100_2026-04-14_no_st.csv  market_top_100_2026-04-14_no_st.md  market_top_6000_2026-03-30_no_st.csv  market_top_6000_2026-03-30_no_st.md  market_top_6000_2026-03-31.csv  market_top_6000_2026-03-31.md  (+19 more)
(+121 files in other folders)
